# PostGIS_modified

./: CMakeLists.txt  CMakePresets.json  MODIFICATIONS.txt  README.md  build.sh  postgis_config.h  postgis_revision.h
cmake/modules/: FindGDAL.cmake  FindGEOS.cmake  FindJSON_C.cmake  FindPROJ.cmake  FindPROTOBUF_C.cmake  FindSFCGAL.cmake
liblwgeom/: CMakeLists.txt  geobuf.pb-c.h  gserialized2.c  liblwgeom.def  liblwgeom.h  lwgeom_api.c  lwgeom_debug.c  lwgeom_geos.c  lwgeom_geos.h  lwgeom_geos_clean.c  lwgeom_geos_cluster.c  lwgeom_geos_node.c  lwgeom_geos_split.c  lwgeom_sfcgal.c  lwgeom_topo.c  lwgeom_transform.c  lwin_encoded_polyline.c  lwin_wkt.h  lwin_wkt_lex.c  lwin_wkt_lex.l  lwin_wkt_parse.c  lwin_wkt_parse.h  lwin_wkt_parse.y  lwlinearreferencing.c  lwout_gml.c  lwout_twkb.c  lwout_twkb.h  lwout_wkb.c  lwout_wkt.c  lwstroke.c  lwutil.c  optionlist.c  optionlist.h  vector_tile.pb-c.h
raster/: raster_config.h
raster/rt_core/: CMakeLists.txt  librtcore.def  librtcore.h  rt_band.c  rt_context.c  rt_gdal.c  rt_geometry.c  rt_raster.c  rt_serialize.c  rt_spatial_relationship.c  rt_statistics.c  rt_wkb.c
